--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>
             <a href="http://jamesliu.info/">James Liu</a><br>
             <div id="si">
-                <a href="https://github.com/jamesliu96" target="_blank">Github</a> | <a href="https://www.facebook.com/jamesliu96.turtle" target="_blank">Facebook</a> | <a href="http://weibo.com/208083451" target="_blank">Weibo</a>
+                <a href="https://github.com/jamesliu96" target="_blank">GitHub</a> | <a href="https://www.facebook.com/jamesliu96.turtle" target="_blank">Facebook</a> | <a href="http://weibo.com/208083451" target="_blank">Weibo</a>
             </div>
         </p>
     </center>
